--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,9 @@
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
+
+dist/
+node_modules/
+.venv
+.mypy_cache
+__pycache__
